--- a/index.html
+++ b/index.html
@@ -15,6 +15,29 @@
 </head>
 
 <body>
+    <nav class="nav">
+        <div class="nav__left">
+            <a href="#" class="nav__logo">
+                <img src="/images/logo.svg" alt="remindme-logo">
+            </a>
+            <ul id="menu" class="nav__list">
+                <li class="nav__item"><a class="nav__link nav__link--active" href="#">Home</a></li>
+                <li class="nav__item"><a class="nav__link" href="#features">Features</a></li>
+                <li class="nav__item"><a class="nav__link" href="#advantages">About Us</a></li>
+            </ul>
+        </div>
+
+        <div class="nav__right">
+            <button class="btn btn-sm btn-outline-blue">
+                <span class="btn__text">About App</span>
+            </button>
+            <div id="menu-btn" class="nav__toggler">
+                <div class="nav__toggler__bar"></div>
+                <div class="nav__toggler__bar"></div>
+                <div class="nav__toggler__bar"></div>
+            </div>
+        </div>
+    </nav>
 
     <script src="scripts/main.js"></script>
 </body>
