--- a/index.html
+++ b/index.html
@@ -38,6 +38,25 @@
             </div>
         </div>
     </nav>
+    <section class="hero">
+        <div class="hero__content">
+            <div class="hero__text">
+                <h1>Manage Schedule and Task Easy</h1>
+                <p>Create and organize schedule and task deadline become better, easy manage and certainly no longer
+                    lagging behind schedule of activities and task.</p>
+            </div>
+            <div class="hero__cta">
+                <button class="btn">
+                    <span class="btn__text">Download App</span>
+                </button>
+            </div>
+        </div>
+        <div class="hero__image">
+            <img class="mobile-img" src="/images/hero-img-mob.png" alt="app-image">
+            <img class="desktop-img" src="/images/hero-img.png" alt="app-image">
+        </div>
+    </section>
+
 
     <script src="scripts/main.js"></script>
 </body>
