add features section

--- a/index.html
+++ b/index.html
@@ -56,6 +56,48 @@
             <img class="desktop-img" src="/images/hero-img.png" alt="app-image">
         </div>
     </section>
+    <section id="features" class="features">
+        <div class="card">
+            <div class="card__image">
+                <img src="images/schedule.svg" alt="schedule-icon">
+            </div>
+            <div class="card__info">
+                <div class="card__title">
+                    Set a better deadline tasks
+                </div>
+                <div class="card__description">
+                    You can make your duty deadlines better and more orderly.
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card__image">
+                <img src="images/layers.svg" alt="tasks-icon">
+            </div>
+            <div class="card__info">
+                <div class="card__title">
+                    Manage the tasks so easily
+                </div>
+                <div class="card__description">
+                    You can manage the deadlines and the schedule becomes easy.
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card__image">
+                <img src="images/notification.svg" alt="notification-icon">
+            </div>
+            <div class="card__info">
+                <div class="card__title">
+                    Don't miss notifications
+                </div>
+                <div class="card__description">
+                    Of course, you will always get the tasks and schedule notifications.
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
     <script src="scripts/main.js"></script>
