add advantages section

--- a/index.html
+++ b/index.html
@@ -97,6 +97,38 @@
             </div>
         </div>
     </section>
+    <section id="advantages" class="advantages">
+        <div class="showcard">
+            <div class="showcard__image">
+                <img src="images/advantages-img-1.png" alt="advantages-image" class="radius-right">
+            </div>
+            <div class="showcard__info">
+                <div class="showcard__title">
+                    <h1 class="heading-1">Set up task and schedule with a best features</h1>
+                </div>
+                <div class="showcard__description">
+                    The best feature makes you better, with the latest technology to meet your needs.
+                    Of course, with such features as organizing schedules and leading assignments,
+                    it will make you easier, So get the application now !
+                </div>
+            </div>
+        </div>
+        <div class="showcard showcard--reverse">
+            <div class="showcard__image">
+                <img src="images/advantages-img-2.png" alt="advantages-image" class="radius-left">
+            </div>
+            <div class="showcard__info">
+                <div class="showcard__title">
+                    <h1 class="heading-1">Get the highest priority application notification</h1>
+                </div>
+                <div class="showcard__description">
+                    The best feature makes you better, with the latest technology to meet your needs.
+                    Of course, with such features as organizing schedules and leading assignments,
+                    it will make you easier, So get the application now !
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
