add download  section

--- a/index.html
+++ b/index.html
@@ -129,7 +129,21 @@
             </div>
         </div>
     </section>
-
+    <section class="download">
+        <div class="download__banner">
+            <div class="download__text">
+                <h1 class="heading-1">Download an app now and the various benefits you will get immediately</h1>
+            </div>
+            <div class="download__cta">
+                <button class="btn btn-white">
+                    <span class="btn__text">Download App</span>
+                </button>
+                <button class="btn btn-outline-white">
+                    <span class="btn__text">About App</span>
+                </button>
+            </div>
+        </div>
+    </section>
 
 
     <script src="scripts/main.js"></script>
