add testimonial section

--- a/index.html
+++ b/index.html
@@ -144,8 +144,45 @@
             </div>
         </div>
     </section>
-
-
+    <section class="testimonials">
+        <div class="testimonials__img">
+            <img src="/images/testimonial-img.png" alt="happy-users">
+        </div>
+        <div class="testimonials__slider">
+            <div class="testimonials__title">
+                <h1 class="heading-1">What do they think</h1>
+            </div>
+            <div class="slider">
+                <div class="testimonial">
+                    <div class="profile">
+                        <div class="profile__img">
+                            <img src="/images/profile-img.png" alt="profile-pic">
+                        </div>
+                        <div class="profile__info">
+                            <div class="profile__name">
+                                Samantha Sench
+                            </div>
+                            <div class="profile__occupation">
+                                Student at University
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial__msg">
+                        “ Hi, it's Samantha. After using it made me a lot of benefits, starting with convenience of
+                        setting a deadline of tasks and schedule after that the app is very simple using. “
+                    </div>
+                </div>
+                <div class="slider__controls">
+                    <div class="slider__btn prev-btn">
+                        <img src="/images/arrow-left.svg" alt="prev">
+                    </div>
+                    <div class="slider__btn next-btn">
+                        <img src="/images/arrow-right.svg" alt="next">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="scripts/main.js"></script>
 </body>
 
