--- a/index.html
+++ b/index.html
@@ -183,6 +183,47 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer__brand">
+            <div class="footer__logo">
+                <img src="images/logo.svg" alt="remindme-logo">
+            </div>
+            <div class="footer_about">
+                <p class="text-light">Task deadlines and scheduling applications with various benefits and advantages.
+                </p>
+            </div>
+        </div>
+        <div class="footer__sitemap">
+            <h2 class="heading-2">Sitemap</h2>
+            <ul class="footer__list">
+                <li class="footer__item"><a href="#" class="footer__link">Home</a></li>
+                <li class="footer__item"><a href="#" class="footer__link">Features</a></li>
+                <li class="footer__item"><a href="#" class="footer__link">About Us</a></li>
+            </ul>
+        </div>
+        <div class="footer__sitemap">
+            <h2 class="heading-2">Advantages</h2>
+            <ul class="footer__list">
+                <li class="footer__item">Set Task Better</li>
+                <li class="footer__item">Easy Manage</li>
+                <li class="footer__item">Get Notification</li>
+            </ul>
+        </div>
+        <div class="footer__social">
+            <h2 class="heading-2">Follow Us</h2>
+            <div class="footer__social__cta">
+                <a href="#" class="social-link">
+                    <img src="/images/facebook.svg" alt="facebook">
+                </a>
+                <a href="#" class="social-link">
+                    <img src="/images/twitter.svg" alt="twitter">
+                </a>
+                <a href="#" class="social-link">
+                    <img src="/images/linkedin.svg" alt="linkedin">
+                </a>
+            </div>
+        </div>
+    </footer>
     <script src="scripts/main.js"></script>
 </body>
 
