update images path

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <title>RemindMe</title>
     <link rel="stylesheet" href="styles/main.css">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/images/favicon/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./images/favicon/site.webmanifest">
 </head>
 
 <body>
     <nav class="nav">
         <div class="nav__left">
             <a href="#" class="nav__logo">
-                <img src="/images/logo.svg" alt="remindme-logo">
+                <img src="./images/logo.svg" alt="remindme-logo">
             </a>
             <ul id="menu" class="nav__list">
                 <li class="nav__item"><a class="nav__link nav__link--active" href="#">Home</a></li>
@@ -52,14 +52,14 @@
             </div>
         </div>
         <div class="hero__image">
-            <img class="mobile-img" src="/images/hero-img-mob.png" alt="app-image">
-            <img class="desktop-img" src="/images/hero-img.png" alt="app-image">
+            <img class="mobile-img" src="./images/hero-img-mob.png" alt="app-image">
+            <img class="desktop-img" src="./images/hero-img.png" alt="app-image">
         </div>
     </section>
     <section id="features" class="features">
         <div class="card">
             <div class="card__image">
-                <img src="images/schedule.svg" alt="schedule-icon">
+                <img src="./images/schedule.svg" alt="schedule-icon">
             </div>
             <div class="card__info">
                 <div class="card__title">
@@ -72,7 +72,7 @@
         </div>
         <div class="card">
             <div class="card__image">
-                <img src="images/layers.svg" alt="tasks-icon">
+                <img src="./images/layers.svg" alt="tasks-icon">
             </div>
             <div class="card__info">
                 <div class="card__title">
@@ -85,7 +85,7 @@
         </div>
         <div class="card">
             <div class="card__image">
-                <img src="images/notification.svg" alt="notification-icon">
+                <img src="./images/notification.svg" alt="notification-icon">
             </div>
             <div class="card__info">
                 <div class="card__title">
@@ -100,7 +100,7 @@
     <section id="advantages" class="advantages">
         <div class="showcard">
             <div class="showcard__image">
-                <img src="images/advantages-img-1.png" alt="advantages-image" class="radius-right">
+                <img src="./images/advantages-img-1.png" alt="advantages-image" class="radius-right">
             </div>
             <div class="showcard__info">
                 <div class="showcard__title">
@@ -115,7 +115,7 @@
         </div>
         <div class="showcard showcard--reverse">
             <div class="showcard__image">
-                <img src="images/advantages-img-2.png" alt="advantages-image" class="radius-left">
+                <img src="./images/advantages-img-2.png" alt="advantages-image" class="radius-left">
             </div>
             <div class="showcard__info">
                 <div class="showcard__title">
@@ -146,7 +146,7 @@
     </section>
     <section class="testimonials">
         <div class="testimonials__img">
-            <img src="/images/testimonial-img.png" alt="happy-users">
+            <img src="./images/testimonial-img.png" alt="happy-users">
         </div>
         <div class="testimonials__slider">
             <div class="testimonials__title">
@@ -156,7 +156,7 @@
                 <div class="testimonial">
                     <div class="profile">
                         <div class="profile__img">
-                            <img src="/images/profile-img.png" alt="profile-pic">
+                            <img src="./images/profile-img.png" alt="profile-pic">
                         </div>
                         <div class="profile__info">
                             <div class="profile__name">
@@ -174,10 +174,10 @@
                 </div>
                 <div class="slider__controls">
                     <div class="slider__btn prev-btn">
-                        <img src="/images/arrow-left.svg" alt="prev">
+                        <img src="./images/arrow-left.svg" alt="prev">
                     </div>
                     <div class="slider__btn next-btn">
-                        <img src="/images/arrow-right.svg" alt="next">
+                        <img src="./images/arrow-right.svg" alt="next">
                     </div>
                 </div>
             </div>
@@ -186,7 +186,7 @@
     <footer class="footer">
         <div class="footer__brand">
             <div class="footer__logo">
-                <img src="images/logo.svg" alt="remindme-logo">
+                <img src="./images/logo.svg" alt="remindme-logo">
             </div>
             <div class="footer_about">
                 <p class="text-light">Task deadlines and scheduling applications with various benefits and advantages.
@@ -213,13 +213,13 @@
             <h2 class="heading-2">Follow Us</h2>
             <div class="footer__social__cta">
                 <a href="#" class="social-link">
-                    <img src="/images/facebook.svg" alt="facebook">
+                    <img src="./images/facebook.svg" alt="facebook">
                 </a>
                 <a href="#" class="social-link">
-                    <img src="/images/twitter.svg" alt="twitter">
+                    <img src="./images/twitter.svg" alt="twitter">
                 </a>
                 <a href="#" class="social-link">
-                    <img src="/images/linkedin.svg" alt="linkedin">
+                    <img src="./images/linkedin.svg" alt="linkedin">
                 </a>
             </div>
         </div>
