text size adjustments

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RemindMe</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
@@ -63,7 +63,7 @@
             </div>
             <div class="card__info">
                 <div class="card__title">
-                    Set a better deadline tasks
+                    Set a better deadline
                 </div>
                 <div class="card__description">
                     You can make your duty deadlines better and more orderly.
@@ -76,7 +76,7 @@
             </div>
             <div class="card__info">
                 <div class="card__title">
-                    Manage the tasks so easily
+                    Manage tasks easily
                 </div>
                 <div class="card__description">
                     You can manage the deadlines and the schedule becomes easy.
